Included PrimeNG and utilized useState hook

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+	font-size: 12px;
+	display: flex;
+	align-items: center;
+	padding: 0 10px;
+	border-bottom: 1px solid #eaeaea;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+	margin-left: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.p-card-header {
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.p-card {
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-card .p-card-title {
+  text-transform: capitalize;
+  margin-top: 0.5rem;
+}
+
+.p-image img {
+  border-radius: 6px;
+}
+
+.attribution {
+	position: absolute;
+	bottom: -10px;
+	display: block;
+	text-align: center;
+	width: 100%;
+	left: 0;
+	margin: 0;
+	font-size: 10px;
 }
